# deos

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  README.md
.agents/skills/: README.md
.github/workflows/: ci.yml  delete-workflow-runs.yml  stress-lane.yml
docs/: README.md  aaa-control-plane.contract.en.md  aaa.architecture.en.md  aaa.embedding.en.md  aaa.specification.en.md  aaa.specification.ru.md  asset-registry.architecture.en.md  axial-router.architecture.en.md  core.architecture.en.md  framework-instance.contract.en.md  governance.architecture.en.md  governance.specification.en.md  manifesto.en.md  manifesto.ru.md  polkadot-sdk-2603.insights.en.md  polkadot-sdk-2606.insights.en.md  randomness.strategy.en.md  read-model.contract.en.md  staking.architecture.en.md  staking.specification.en.md  tmc.architecture.en.md  tmctol.specification.en.md  tmctol.specification.ru.md  web-client.architecture.en.md
scripts/: 01-download-binaries.sh  02-install-tools.sh  03-build-runtime.sh  04-generate-chain-spec.sh  05-spawn-zombienet.sh  06-zombienet-e2e.sh  07-seed-web-client-state.sh  07-start-web-client.sh  08-seed-web-client-state.sh  09-web-client-live-probe.sh  10-web-client-bundle-report.sh  README.md  _common.sh  aaa-release-gate.sh  apply-authorized-upgrade-local.sh  audit-template-readiness.sh  authorized-upgrade-local.sh  benchmarks.sh  bootstrap-local-network.sh  bootstrap-native-staking-local.sh  check-authorized-upgrade-local.sh  ci-local.sh  clean-local-artifacts.sh  export-papi-metadata.sh  release-local.sh  seed-web-client-state.sh  teardown-local-network.sh  try-runtime-local.sh  validate-local.sh
simulator/: README.md  model.js  tests.js  tests.md  types.d.ts
template/: Cargo.toml  README.md  rust-toolchain.toml
template/aaa-embedding-runtime/: Cargo.toml  README.md
template/aaa-embedding-runtime/src/: lib.rs
template/pallets/: README.md
template/pallets/aaa/: Cargo.toml  EMBEDDING.md  README.md
template/pallets/aaa/embedding-runtime/: Cargo.toml  README.md
template/pallets/aaa/embedding-runtime/src/: lib.rs
template/pallets/aaa/src/: adapters.rs  benchmarking.rs  execution.rs  lib.rs  mock.rs  scheduler.rs  tests.rs  types.rs  weights.rs
template/pallets/asset-registry/: Cargo.toml  README.md
template/pallets/asset-registry/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
template/pallets/axial-router/: Cargo.toml  README.md
template/pallets/axial-router/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
template/pallets/governance/: Cargo.toml  README.md
template/pallets/governance/src/: benchmarking.rs  epoch_service.rs  lib.rs  mock.rs  proposal_execution.rs  proposal_resolution.rs  reward_memory.rs  tests.rs
template/pallets/staking/: Cargo.toml  README.md
template/pallets/staking/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
template/pallets/tmc/: Cargo.toml  README.md
template/pallets/tmc/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
template/primitives/: Cargo.toml
template/primitives/src/: assets.rs  ecosystem.rs  lib.rs  tmctol.rs
template/runtime/: Cargo.toml
template/runtime/examples/: export_metadata.rs
template/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs  tmctol_read_model.rs
template/runtime/src/chain_specs/: mod.rs
template/runtime/src/configs/: aaa_config.rs  address_event_ingress.rs  assets_config.rs  axial_router_config.rs  governance_config.rs  mod.rs  pool_index.rs  preimage_config.rs  staking_config.rs  tmc_config.rs  xcm_config.rs
template/runtime/src/governance/: mod.rs
template/runtime/src/monitoring/: mod.rs
template/runtime/src/tests/: aaa_integration_tests.rs  asset_registry_integration_tests.rs  axial_router_integration_tests.rs  common.rs  economic_metrics.rs  fee_integration_tests.rs  governance_integration_tests.rs  load_testing.rs  mod.rs  staking_integration_tests.rs  tmctol_integration_tests.rs  tmctol_invariants.rs
template/runtime/src/weights/: mod.rs  pallet_aaa.rs  pallet_asset_registry.rs  pallet_axial_router.rs  pallet_governance.rs  pallet_staking.rs  pallet_tmc.rs  pallet_xcm.rs
web-client/: .gitignore  .prettierignore  .prettierrc  README.md  domain-dag.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web-client/.papi/: polkadot-api.json
web-client/scripts/: test-aaa-forecast.mjs  test-aaa-governance-composition.mjs  test-aaa-matching-wasm.mjs  test-aaa-plan-artifact.mjs  test-aaa-simulation.mjs  validate-domain-dag.mjs  validate-wiki-trust.mjs
web-client/src/: app.css  app.d.ts  app.html  random-360.css
wiki/: index.en.md  index.ru.md  log.en.md  log.ru.md
wiki/_meta/: aliases.json  consolidation.json  graph.json  locales.json  navigation.json  search.json  state.json
wiki/community/: contributing.en.md  contributing.ru.md
wiki/comparisons/: deos-vs-dao-treasury.en.md  deos-vs-dao-treasury.ru.md  physics-vs-politics.en.md  physics-vs-politics.ru.md
wiki/concepts/: architecture-diagrams.en.md  architecture-diagrams.ru.md  builder-economy.en.md  builder-economy.ru.md  domain-map.en.md  domain-map.ru.md  economic-claim-levels.en.md  economic-claim-levels.ru.md  economic-thresholds.en.md  economic-thresholds.ru.md  end-to-end-flows.en.md  end-to-end-flows.ru.md  generated-wiki.en.md  generated-wiki.ru.md  governance-domains.en.md  governance-domains.ru.md  invariant-map.en.md  invariant-map.ru.md  parachain-context.en.md  parachain-context.ru.md  read-model-split.en.md  read-model-split.ru.md  routing-and-minting-loop.en.md  routing-and-minting-loop.ru.md  staking-pools.en.md  staking-pools.ru.md  threat-model.en.md  threat-model.ru.md  tmctol-standard.en.md  tmctol-standard.ru.md  token-driven-automation.en.md  token-driven-automation.ru.md  token-surfaces.en.md  token-surfaces.ru.md  tol-bucket-scenarios.en.md  tol-bucket-scenarios.ru.md  ui-kit-and-domain-dag.en.md  ui-kit-and-domain-dag.ru.md  what-deos-is-not.en.md  what-deos-is-not.ru.md
wiki/development/: status.en.md  status.ru.md  three-layer-validation.en.md  (+1 more)
(+271 files in other folders)
