[package]
name = "pallet-aaa"
version = "0.7.3"
description = "Deterministic Account Abstraction Actors and bounded runtime automation for FRAME"
authors = ["DEOS Contributors"]
license = "MIT-0"
homepage = "https://github.com/atmo-network/deos"
repository = "https://github.com/atmo-network/deos"
documentation = "https://docs.rs/pallet-aaa"
readme = "README.md"
keywords = ["substrate", "frame", "automation", "actors"]
categories = ["cryptography::cryptocurrencies"]
edition.workspace = true
publish = false
include = ["Cargo.toml", "README.md", "EMBEDDING.md", "src/**/*.rs"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-api = { workspace = true }
frame = { workspace = true }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "sp-runtime",
  "sp-weights",
] }

[dev-dependencies]
proptest = { workspace = true }
serde = { workspace = true }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-balances",
  "sp-core",
  "sp-io",
  "sp-runtime",
] }

[features]
default = ["std"]
std = [
  "codec/std",
  "polkadot-sdk/std",
  "scale-info/std",
  "sp-api/std",
]
runtime-benchmarks = [
  "polkadot-sdk/runtime-benchmarks",
  "frame/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]
