[package]
name = "pallet-deos-staking"
version = "0.7.0"
description = "Multi-asset share-vault staking pools"
authors.workspace = true
license = "MIT-0"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame = { workspace = true }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-assets",
  "sp-runtime",
  "sp-core",
] }

[dev-dependencies]
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-assets",
  "pallet-balances",
  "sp-core",
  "sp-io",
] }

[features]
default = ["std"]
std = [
  "codec/std",
  "polkadot-sdk/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "polkadot-sdk/runtime-benchmarks",
  "frame/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]
