[package]
name = "pallet-tmc"
version = "0.6.11"
description = "Token Minting Curve pallet implementing linear price ceiling with unidirectional minting for the TMCTOL standard on DEOS"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame = { workspace = true }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-assets",
  "pallet-balances",
  "sp-runtime",
  "sp-io",
  "sp-core",
] }
primitives = { workspace = true, default-features = false }

[dev-dependencies]
proptest = { workspace = true }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-assets",
  "pallet-balances",
  "sp-core",
  "sp-io",
  "sp-runtime",
] }

[features]
default = ["std"]
std = [
    "codec/std",
    "primitives/std",
    "polkadot-sdk/std",
    "scale-info/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
]
